update geometry for primary school

--- a/几何 Geometry/面积模型/小学数学-几何面积模型（一）.md
+++ b/几何 Geometry/面积模型/小学数学-几何面积模型（一）.md
@@ -1,16 +1,10 @@
-# 小学数学-几何面积模型
+# 小学数学-几何面积模型（一）
 
-FileName:  
-    PriAreaModule-面积模型.md
+FileName:   小学数学-几何面积模型（一）.md
 
-Created Date:  
-    August 31, 2020  
+Created Date:      August 31, 2020  
 
-Author:  
-    Liu Xiang    
-
-Contact:  
-    liuxiangxyd@163.com
+Contact:     kumath@outlook.com
 
 ## 1. 常用几何图形的面积
 
@@ -156,14 +150,6 @@ step3. 最后得到目标面积与已知面积的比例关系。
 
 [练习6解析](practice/练习6.ggb)
 
-## 6. 风筝模型
+## 总结（一）
 
-## 7. 蝴蝶模型
-
-## 8. 构造模型求面积
-
-## 9. 复合图形拆分
-
-## 10. 分拆成几何模型求面积
-
-
+![面积模型一总结](img/面积模型之一总结.jpg)
