update grade 5 math 9-22-2020

--- a/primary/grade5/分数应用题讲解.md
+++ b/primary/grade5/分数应用题讲解.md
@@ -10,15 +10,15 @@
 
 可以从应用题中总结规律，找到最快判别 **单位1** 的方法。  
 
-首先来看关键词：“比” “的” “比后的前“ 比后面的数量的前面的数量为单位1
+首先来看关键词：“比” “的” “比XX的多或少” 
 
 ### 例题1
 
-一条公路，已经修好了 **2** 千米，这时未修的比已修的多 $\dfrac{1}{5}$，这条公路全长多少？
+一条公路，已经修好了 **2** 千米，这时“未修的”比“已修的”多 $\dfrac{1}{5}$，这条公路全长多少？
 
-在这道应用题中，“比”这个字后面的是已经修好的长度，“的”这个字前面的也是已经修好的长度，因此 **单位1** 是已经修好的长度。在这道题中，我们不把全长作为单位1。
+在这道应用题中，“比”字后面的是“已经修好的长度”，“的”字前面的也是“已经修好的长度”，因此 **单位1** 是**已经修好的长度**。在这道题中，我们不把全长作为单位1。
 
-解析：未修的里程比已修的里程多 $\dfrac{1}{5}$, 因为已修里程为 2 km，所以未修里程是 $2+2\times\dfrac{1}{5}=2\dfrac{2}{5}$ km, 全程就是 已修+未修 = $2+2\dfrac{2}{5}=4\dfrac{2}{5}$ km.
+**解析**：未修的里程 “比” 已修的里程多 $\dfrac{1}{5}$, 因为已修里程为 2 km，所以未修里程是 $2+2\times\dfrac{1}{5}=2\dfrac{2}{5}$ km, 全程就是 已修+未修 = $2+2\dfrac{2}{5}=4\dfrac{2}{5}$ km.
 
 画线段图如下：
 
@@ -35,7 +35,7 @@ $\begin{aligned}
 
 这里要抓住关键的两句话（下划线的两句）。
 
-第一句：“的”字 **前面** 的是 **单位1**，第二句：“比”字 **后面** 的是 **单位1**
+第一句：“的”字前面的是 **单位1**，第二句：“比”字后面的是 **单位1**
 
 解析：第一天吃了 $40\times\dfrac{1}{2}=20$ kg,    
 第二天比第一天少吃 $20\times\dfrac{1}{4}=5$ kg, 故第二天吃了 $20-5=15$ kg.
@@ -52,19 +52,19 @@ $\left . \begin{aligned}
    
    答：第二天吃了 15 千克。
 
-在做分数乘法和分数除法的应用题时，第一步就是明确单位1，通过比后的前四个字明确好单位1，当然一个复杂的应用题中不止一个单位1，这个就需要分开讨论了
+在做分数乘法和分数除法的应用题时，第一步就是明确单位1，通过“比”字后或前的几个字明确好单位1，当然一个复杂的应用题中不止一个单位1，需要分开讨论。
 
 ## 为什么要找到单位1（求一个数的几分之几是多少）
 
-一个数乘以分数的意义，比如 $5×\dfrac{1}{4}$ 表示 **5的$\dfrac{1}{4}$** 是多少，同样的 5的$\dfrac{1}{4}$是多少也可以用 $5×\dfrac{1}{4}$ 来计算。大家可以看到，在这里“的”表示的就是一个乘法。
+一个数乘以分数的意义，比如 $5×\dfrac{1}{4}$ 表示 **5的$\dfrac{1}{4}$** 是多少，同样的 5的$\dfrac{1}{4}$是多少也可以用乘法式子 $5×\dfrac{1}{4}$ 来计算，此处 “的”表示的就是一个乘法。
 
-求5的 $\dfrac{1}{4}$ 是多少，就是把 **5** 看作一个整体，平均分成 **4** 份，求一份是多少？有关于单位1的都是这样的思想！
+求5的 $\dfrac{1}{4}$ 是多少，就是把 **5** 看作一个整体（单位1），平均分成 **4** 份，求一份是多少？有关于单位1的概念都是这样的思想！
 
 ### 例题3
 
 小明的零花钱是 **20** 元，张强的零花钱是小明零花钱的 $\dfrac{1}{4}$，问张强有多少元零花钱？
 
-在这道题中，“的”字前面的数量也就是小明零花钱为单位1，“的”就表示乘法，因此张强的零花钱是：$20×\dfrac{1}{4}=5$ 元。
+在这道题中，“的”字前面的数量也就是“小明零花钱”为单位1，“的”就表示乘法，因此张强的零花钱是：$20×\dfrac{1}{4}=5$ 元。
 
 因此找到单位1是我们去做分数乘法和分数除法最重要的第一步。
 
@@ -80,12 +80,13 @@ $\left . \begin{aligned}
 
 一本书有 **240** 页，鹏鹏第一天看了全书的 $\dfrac{1}{4}$，第二天看了余下的 $\dfrac{1}{6}$，第三天应从多少页开始看？
 
-解题过程：第一天：$240×\dfrac{1}{4}=60$（页）第一天看了60页，余下240-60=180页；   
-第二天：$180×\dfrac{1}{6}=30$（页）总共两天看了90页，第三天从91页开始看。
+解题过程：第一天：$240×\dfrac{1}{4}=60$（页），第一天看了60页，余下240-60=180页；   
+第二天：$180×\dfrac{1}{6}=30$（页）   
+总共两天看了90页，第三天从91页开始看。
 
 ## 比一个数 **多或少** 几分之几
 
-经过上面的拆解，我们已经知道 **一个数的几分之几是多少** 应该怎么去求了，直接用 **乘法** 就可以了。在此基础上我们再进行加深，当然这种题也不难，只需要在此基础上再加上一步就能求出正确答案。
+经过上面的拆解，我们已经知道 **一个数的几分之几是多少** 应该怎么去求了，直接用 **乘法** 。在此基础上我们再进行加深，当然这种题也不难，只需要在此基础上再加上一步就能求出正确答案。
 
 ### 例题6
 
@@ -94,6 +95,8 @@ $\left . \begin{aligned}
 明确单位1是第一根绳子，不用管太多，用单位1乘以分数，$2×\dfrac{1}{4}=\dfrac{1}{2}$（米）
 
 那么也就是说第二根绳子比第一根绳子长 $\dfrac{1}{2}$ 米，第一根绳子是2米，那么第二根绳子就是$2+\dfrac{1}{2}=2.5$ 米。
+
+答：第二根绳子长2.5米。
 
 ### 例题7
 
@@ -141,32 +144,35 @@ $\left . \begin{aligned}
 
 ## 分数乘除法公式
 
-现在我们引入三个概念，标准量，比较量和分率 （也可以理解为 总量，分量和占比）
-
-标准量为单位1，是一个整体，比较量就是标准量的几分之几。
+现在我们引入三个概念：**标准量，比较量和分率**（也可以理解为 **总量，分量和占比**）   
+标准量为单位1，是一个整体，比较量就是标准量的几分之几（分率）。
 
 ### 例题10
 
-举个例子，把一个 **10** 千克蛋糕平均分成 **5** 份，求其中一份蛋糕重量是多少千克？
+把一个 **10** 千克蛋糕平均分成 **5** 份，求其中一份蛋糕重量是多少千克？
 
 $10×\dfrac{1}{5}=2$（千克）
 
 在这道题中，标准量（总量）就是一个蛋糕10千克，比较量（分量）2千克，分率（占比）就是 $\dfrac{1}{5}$
 
-因此：**比较量=标准量×分率**， **分量=总量×占比** 
+因此：**比较量=标准量×分率** 或 **分量=总量×占比** 
 
-由此可以引申：**标准量=比较量÷分率**， **分率=比较量÷标准量**， **总量=分量÷占比， 占比=分量÷总量**
+由此可以引申：**标准量=比较量÷分率**， **分率=比较量÷标准量**， **总量=分量÷占比**， **占比=分量÷总量**
+
+类似 路程、速度和时间的关系式：**路程=速度×时间**
 
 ## 分数应用题的分类
 
-1. **求一个数是另一个数的几分之几（所求的分率或占比）**    
-   这类问题的特点是已知两个量，比较它们间的倍数关系，解这类题用 **除法**。
-   - 求 $a$ 是 $b$ 的几分之几：$a÷b=\dfrac{a}{b}$=分率（几分之几）
-   - 求 $a$ 比 $b$ 多几分之几：相差量÷单位1的量=分率（多几分之几），即 $(a-b)÷b=\dfrac{a-b}{b}$
-   - 求 $a$ 比 $b$ 少几分之几：相差量÷单位1的量=分率（少几分之几），即 $(b-a)÷b=\dfrac{b-a}{b}$
+1. **求一个数是另一个数的几分之几（分率或占比）**    
+   这类问题的特点：已知两个量，比较它们间的倍数关系，解这类题用 **除法**。
+   - 求 $a$ 是 $b$ 的几分之几：$a÷b=\dfrac{a}{b}$ 即可得到分率（几分之几）
+   - 求 $a$ 比 $b$ 多几分之几：相差量÷单位1的量=分率（多几分之几），即 $(a-b)÷b=\dfrac{a-b}{b}=\dfrac{a}{b}-1$
+   - 求 $a$ 比 $b$ 少几分之几：相差量÷单位1的量=分率（少几分之几），即 $(b-a)÷b=\dfrac{b-a}{b}=1-\dfrac{a}{b}$
+   
+   注意：“比”后面的量为 单位1的量，作为除数使用。
 
-2. **已知单位“1”和分率（占比），求对应的量。**   
-   这类问题的特点是已知单位“1”的量，求一个数的几分之几是多少的数量，解这类题型，通常用 **乘法**。
+2. **已知“单位1的量”和分率（占比），求对应的量。**   
+   这类问题的特点：已知单位1的量，求一个数的几分之几是多少的数量，解这类题型，通常用 **乘法**。
    - 求 $a$ 千克的 $\dfrac{n}{m}$ 是多少千克？ $a(单位1)\times \dfrac{n}{m}(分率)$=是多少千克或分量(分率对应的量)
    - 求比 $a$ 千克多 $\dfrac{n}{m}$，多多少千克？ $a(单位1)\times \dfrac{n}{m}(分率)$=多的千克(分率对应的量)
    - 求比 $a$ 千克多 $\dfrac{n}{m}$ 是多少千克？ $a(单位1)\times (1+\dfrac{n}{m})(分率)$=是多少千克(分率对应的比较量或分量)
@@ -174,16 +180,16 @@ $10×\dfrac{1}{5}=2$（千克）
    - 求比 $a$ 千克少 $\dfrac{n}{m}$ 是多少千克？ $a(单位1)\times (1-\dfrac{n}{m})(分率)$=是多少千克或分量(分率对应的比较量)
 
 3. **已知一个数的几分之几是多少，求这个数。**   
-   这类问题的特点是已知一个数的几分之几是多少的数量，求单位“1”的量，解这类题型，通常用 **除法**。
-   - 一个数的 $\dfrac{n}{m}$ 是 $a$, 求这个数。$a(分率对应的量)\div \dfrac{n}{m}(分率)$=单位1对应的总量
-   - $a$ 比一个数多 $\dfrac{n}{m}$, 求这个数。$a(分率对应的量)\div (1+\dfrac{n}{m})(分率)$=单位1对应的总量
-   - 一个数比另一个数多 $\dfrac{n}{m}$， 一个数比另一个数多 $a$, 求另一个数。$a(分率对应的量)\div \dfrac{n}{m}(分率)$=单位1对应的总量   
+   这类问题的特点：已知一个数的几分之几是多少的数量，求“单位1”的量，解这类题型，通常用 **除法**。
+   - 一个数的 $\dfrac{n}{m}$ 是 $a$, 求这个数。$a(分率对应的量)\div \dfrac{n}{m}(分率)$=单位1对应的量
+   - $a$ 比一个数多 $\dfrac{n}{m}$, 求这个数。$a(分率对应的量)\div (1+\dfrac{n}{m})(分率)$=单位1对应的量
+   - 一个数比另一个数多 $\dfrac{n}{m}$， 一个数比另一个数多 $a$, 求另一个数。$a(分率对应的量)\div \dfrac{n}{m}(分率)$=单位1对应的量   
 
-## 分数应用题解法
+## 总结：分数应用题解法
 
 ### 正确审题   
 
-要正确审题，否则前功尽弃。首先根据题中的分率句子，准确判断单位1的量和对应量 (通常情况下看分率谁的几分之几，谁就是单位1的量)，且判断单位1的量已知（用乘法）或者单位1的量未知（用除法或者列方程）；其次会把“比”字句转换成“是”字句；第三是能够将模糊分率句转换成较详细的句子。
+要正确审题，否则前功尽弃。首先根据题中的分率句子，准确判断单位1的量和对应量 (通常情况下看分率是“谁的几分之几”，谁就是单位1的量)，且判断单位1的量已知（用乘法）或者单位1的量未知（用除法或者列方程）；其次会把“比”字句转换成“是”字句；第三是能够将模糊分率句转换成较详细的句子。
 
 ### **画线段图**
 
@@ -196,16 +202,16 @@ $10×\dfrac{1}{5}=2$（千克）
 一批货物，第一次运走总数的 $\dfrac{1}{5}$，第二次运走总数的 $\dfrac{1}{4}$，还剩下 **110** 吨。对应量，分率，单位1的量之间的对应关系如下：
     
 - 单位1的量：货物的总重量；  
-- 第一次运走的量：总重量的$\dfrac{1}{5}$；  
-- 第二次运走的量：总重量的$\dfrac{1}{4}$；  
-- 两次运走的重量占比：$\dfrac{1}{5}+\dfrac{1}{4}=\dfrac{9}{20}$；  
-- 两次后剩下的量：$1-\dfrac{1}{5}-\dfrac{1}{4}=\dfrac{11}{20}$；  
-- 两次后剩下的分率与对应量：$110和\dfrac{11}{20}$；
-- 对应总量就是 $110\div\dfrac{11}{20}=110\times\dfrac{20}{11}=200$ 吨
+- 第一次运走的量：总重量的$\frac{1}{5}$；  
+- 第二次运走的量：总重量的$\frac{1}{4}$；  
+- 两次运走的重量占比：$\frac{1}{5}+\frac{1}{4}=\frac{9}{20}$；  
+- 两次后剩下的量：$1-\frac{1}{5}-\frac{1}{4}=\frac{11}{20}$；  
+- 两次后剩下的分率与对应量：$110和\frac{11}{20}$；
+- 对应总量就是 $110\div\frac{11}{20}=110\times\frac{20}{11}=200$ 吨
 
 ### 寻找分率
 
-在解决较复杂的分数应用题时，需要将间接分率转化为能够解题的分率，也就是我们需要的分率，由已知的分率联想到和它相关的分率。
+在解决较复杂的分数应用题时，需要将“间接分率”转化为“能够解题的分率”，也就是我们需要的分率，由已知的分率联想到和它相关的分率。
 
 #### 例题12
 
