--- a/primary/grade5/分数乘除法讲解.md
+++ b/primary/grade5/分数乘除法讲解.md
@@ -1,10 +1,11 @@
 # 分数乘除法讲解
 
+学习过分数后，除法就可以化为乘法来解决。  
+为此我们需要引入一个新的数——**倒数**，拼音是dào shù
+
 ## $\textcolor{red}{倒数}$ reciprocal / multiplicative inverse
 
-拼音是dào shù
-
-1. 非零整数 $n$ 的倒数是 $\dfrac{1}{n}$  
+1. 非零整数 $n$ 的倒数是分数 $\dfrac{1}{n}$  
 2. 分数 $\dfrac{b}{a}$ 的倒数是 $\dfrac{a}{b}$, 此处 $a\ne 0, b\ne 0$
 3. 互为倒数的两个数的乘积为1，即 $\dfrac{a}{b} \times \dfrac{b}{a}=1$
 4. 带分数的倒数求法，先化成假分数，然后利用第2条规则即可得到
@@ -14,29 +15,31 @@
 1. 15的倒数是 $\dfrac{1}{15}$
 2. 分数$\dfrac{3}{4}$的倒数是 $\dfrac{4}{3} = 1 \dfrac{1}{3}$ 
 3. 带分数 $3\dfrac{2}{5}$的倒数是 (1) 化成假分数$\dfrac{17}{5}$，(2) 再颠倒就是 $\dfrac{5}{17}$
-4. 倒数是本身的数 即 $x=\dfrac{1}{x}$, 所以 $x^2-1=0, x=\pm 1$
+4. 倒数是本身的数 即 $x=\dfrac{1}{x}$, 所以 $x^2=1, x=\pm 1$
 
 ## 分数分类
 
-1. 分数值**小于1**的分数，为**真分数(<1)**，即 分子小于分母的分数为真分数(Proper fraction)，真分数都小于1
-2. 分数值**大于或等于1**的分数，为**假分数($\ge1$)**，即 分子大于或等于分母的分数为假分数（improper fraction），**假分数不小于1**
+1. 分数值**小于1**的分数，为**真分数$(<1)$**，即 分子小于分母的分数为真分数(proper fraction)，真分数都小于1
+2. 分数值**大于或等于1**的分数，为**假分数$(\ge1)$**，即 分子大于或等于分母的分数为假分数（improper fraction），**假分数不小于1**
 3. 整数和真分数合成的数叫带分数, 带分数都大于1
    
-例如：$\dfrac{1}{3},\dfrac{3}{5} 是真分数$
+   例如：$\dfrac{1}{3},\dfrac{3}{5} 是真分数$
 
-$\dfrac{3}{3},\dfrac{5}{5},\dfrac{7}{1},\dfrac{5}{3},\dfrac{7}{5},\dfrac{13}{11}是假分数$   
+   $\dfrac{3}{3},\dfrac{5}{5},\dfrac{7}{1},\dfrac{5}{3},\dfrac{7}{5},\dfrac{13}{11}是假分数$   
 
-$2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
+   $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
 
-例题   
+### 例题   
+
 1. 写出所有分母是7的真分数
    - $\dfrac{1}{7},\dfrac{2}{7},\dfrac{3}{7},\dfrac{4}{7},\dfrac{5}{7},\dfrac{6}{7}$
 2. 写出所有分子是7的假分数
    - $\dfrac{7}{1},\dfrac{7}{2},\dfrac{7}{3},\dfrac{7}{4},\dfrac{7}{5},\dfrac{7}{6},\dfrac{7}{7}$
 3. 写出6个分母是7的假分数
    - $\dfrac{10}{7},\dfrac{12}{7},\dfrac{13}{7},\dfrac{14}{7},\dfrac{15}{7},\dfrac{16}{7}$
-4. 分母是7的所有真分数有 6 个，其中最大的是 $\dfrac{6}{7}$, 最小的是 $\dfrac{1}{7}$; 分子是7的假分数有 7 个，最大的是 $\dfrac{7}{7}$
-5. 分数单位是 $\dfrac{1}{9}$ 的最大真分数是 $\dfrac{8}{9}$, 最小假分数是 $\dfrac{9}{9}$
+4. 分母是7的所有真分数有 6 个，其中最大的是 $\dfrac{6}{7}$, 最小的是 $\dfrac{1}{7}$
+5. 分子是7的假分数有 7 个，最大的是 $\dfrac{7}{7}$
+6. 分数单位是 $\dfrac{1}{9}$ 的最大真分数是 $\dfrac{8}{9}$, 最小假分数是 $\dfrac{9}{9}$
 
 ## 分数乘法 Fractional multiplication
 
@@ -44,12 +47,14 @@ $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
 
 分数的分子与分子相乘，分母与分母相乘，**能约分的要先约分**，分子不能和分母乘。
 
+$\dfrac{a}{b}\times\dfrac{c}{d}=\dfrac{a\times c}{b\times d}$
+
 ### 乘法分类
 
-1. 分数乘整数时，用分数的分子和整数相乘的积做分子，分母不变。**能约分的要先约分**。
+1. 分数乘整数时，用分数的分子和整数相乘的积作为分子，分母不变。**能约分的要先约分**。
    - $\dfrac{2}{3}\times4=\dfrac{2\times4}{3}=\dfrac{8}{3}=2\dfrac{2}{3}\\[1em]$
    - $5\times \dfrac{3}{7}=\dfrac{5\times3}{7}=\dfrac{15}{7}=2\dfrac{1}{7}\\[1em]$
-   - $\dfrac{5}{\bcancel{8}^2}\times \bcancel{4}^1=\dfrac{5}{2}\times1=2\dfrac{1}{2}, 先约分\\[1em]$
+   - $\dfrac{5}{\bcancel{8}^2}\times \bcancel{4}^1=\dfrac{5}{2}\times1=2\dfrac{1}{2}, 先约分后相乘\\[1em]$
    - $\dfrac{a}{b}\times c=c\times\dfrac{a}{b}=\dfrac{ac}{b}$
  
 2. 带分数乘以整数时
@@ -60,8 +65,8 @@ $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
         如 $5\times3\dfrac{2}{7}=5\times(3+\dfrac{2}{7})=15+\dfrac{10}{7}=15+1\dfrac{3}{7}=16\dfrac{3}{7}\\$     
         如 $3\times 4\dfrac{3}{5}=3\times(4+\dfrac{3}{5})=12+\dfrac{9}{5}=12+1\dfrac{4}{5}=13\dfrac{4}{5}\\$
         
-3. 分数乘分数, 用分子相乘的积做分子，分母相乘的积做分母, **能约分的先约分**, 带分数必须化成假分数。
-   - $\dfrac{a}{b}\times\dfrac{c}{d}=\dfrac{ac}{bd}, bd\ne 0\\[1em]$
+3. 分数乘分数, 用分子相乘的积作为分子，分母相乘的积作为分母, **能约分的先约分**, 带分数必须化成假分数。
+   <!-- - $\dfrac{a}{b}\times\dfrac{c}{d}=\dfrac{ac}{bd}, bd\ne 0\\[1em]$ -->
    - $\dfrac{2}{3}\times\dfrac{4}{5}=\dfrac{2\times4}{3\times5}=\dfrac{8}{15}\\[1em]$
    - $\dfrac{\bcancel{355}^{71}}{113}\times\dfrac{2}{\bcancel{5}^1}=\dfrac{71}{113}\times\dfrac{2}{1}=\dfrac{142}{113}=1\dfrac{29}{113}\\[1em]$
    - $1\dfrac{2}{3}\times2\dfrac{3}{5}=\dfrac{\bcancel{5}^1}{3}\times\dfrac{13}{\bcancel{5}^1}=\dfrac{1}{3}\times\dfrac{13}{1}=\dfrac{13}{3}=4\dfrac{1}{3}$
@@ -72,6 +77,8 @@ $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
 
    分数除法实际上可以化成分数乘法，除以一个数，等于乘以这个数的**倒数**    
    分数乘除法结果要求化为最简, **除数不能为 0**。
+
+   $\dfrac{a}{b}\div\dfrac{c}{d}=\dfrac{a}{b}\times\dfrac{d}{c} =\dfrac{a\times d}{b\times c},\; b\ne0,\;c\ne0$
 
 ### 除法分类
 
@@ -86,7 +93,7 @@ $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
 
 ## 几个特殊情况
 
-1. $0\div a=0, a\ne0$
+1. $0\div a=0, \;a\ne0$
 2. $b\times 0=0\times b=0$
 3. $c+0=0+c=c$
 4. $d-d=0, d+d=2d$
@@ -96,6 +103,6 @@ $2\dfrac{2}{3}, 3\dfrac{1}{7},3\dfrac{16}{113}是带分数$
 ## 本节总结
 
 1. 了解倒数概念，并懂得其在除法中的应用
-2. 分数的几种出现形式，真分数、假分数和带分数区别
+2. 分数的几种表现形式，了解真分数、假分数和带分数的区别
 3. 分数乘法法则和约分准则，结果必须化简，即结果是最简分数或整数
-4. 分数除法转化为分数乘法，转化为乘以除数的倒数
+4. 分数除法转化为分数乘法，即乘以除数的倒数
