update 约数合数，add 素数合数

--- a/primary/grade5/约数与倍数进阶篇.md
+++ b/primary/grade5/约数与倍数进阶篇.md
@@ -8,6 +8,7 @@ $\boxed{两数的最大公约数与最小公倍数的乘积等于两数的乘积
 
 因为有上述关系式，所以，我们只要有求最大公约数的方法，最小公倍数就可以通过上述关系式得到。这也是很多软件中，只有求最大公约数的函数，而没有提供求最小公倍数的函数的原因。
 
+
 ## 多个数互素
 ------------
 
@@ -16,6 +17,7 @@ $\boxed{两数的最大公约数与最小公倍数的乘积等于两数的乘积
 1. 两个连续整数一定互素，$(n,n+1)=1,\; n \in \mathrm{N}$
 2. 奇数和偶数一定互素，$(2n,2m+1)=1,\; n,m \in \mathrm{N}$
 3. 求多个数的最大公约数，可以用嵌套完成：$gcd(a,b,c)=gcd(gcd(a,b),c)$，便于程序实现。
+
 
 ## 应用例题
 -----------
@@ -66,22 +68,37 @@ $\qquad A.\;5\qquad B.\;7\qquad C.\;9\qquad D.\;12$
 
 $\qquad A.\;2\qquad B.\;4\qquad C.\;6\qquad D.\;8$
 
-解法一：本题初看感觉题目很复杂，但是仔细理解发现这道题目并不复杂，也可以用最简单最原始的方法——**枚举法**解题，1号游戏者会将所有卡片进行翻转，2号则会将编号为2、4、6、8、10进行翻转，3号游戏者则会将编号为3、6、9的卡片进行翻转….依次类推，最终得出结论，正面朝上的卡片编号为 $1，4, 9$. 故最终答案为选项 $D$。 
+解法一：本题初看感觉题目很复杂，但是仔细理解发现这道题目并不复杂，也可以用最简单最原始的方法——**枚举法**解题，1号游戏者会将所有卡片进行翻转，2号则会将编号为2、4、6、8、10进行翻转，3号游戏者则会将编号为3、6、9的卡片进行翻转….依次类推，最终得出结论，正面朝上的卡片编号为 $1, 4, 9$, 故最终答案为选项 $D$。 
 
-解法二：本题需要理解题目实质，游戏者需要翻转卡片，而翻转的规则是卡片号为游戏者编号的倍数的需要去翻转，反之，如果游戏者的编号是卡片编号的约数需要翻转，即这张卡片有几个约数就需要翻转几次，但是题目规定卡片最初的状态是背面向上，最终状态为正面向上，即需要翻转奇数次，试想哪些数字的约数个数是奇数个，普通数字的约数个数必然成对出现，而只有**平方数的约数个数为奇数个**。所以这道题的本质即为10以内，最大的平方数和最小的平方数差为几。显然 $9-1=8$. 答案当选 $D$。
+|次序|1  |2  |3  |4  |5  |6  |7  |8  |9  |10 |
+|--- |---|---|---|---|---|---|---|---|---|---|
+|一  |+  |+  |+  |+  |+  |+  |+  |+  |+  |+  |
+|二  |+  |-  |+  |-  |+  |-  |+  |-  |+  |-  |
+|三  |+  |-  |-  |-  |+  |+  |+  |-  |-  |-  |
+|四  |+  |-  |-  |+  |+  |+  |+  |+  |-  |-  |
+|五  |+  |-  |-  |+  |-  |+  |+  |+  |-  |+  |
+|六  |+  |-  |-  |+  |-  |-  |+  |+  |-  |+  |
+|七  |+  |-  |-  |+  |-  |-  |-  |+  |-  |+  |
+|八  |+  |-  |-  |+  |-  |-  |-  |-  |-  |+  |
+|九  |+  |-  |-  |+  |-  |-  |-  |-  |+  |+  |
+|十  |+  |-  |-  |+  |-  |-  |-  |-  |+  |-  |
+
+注意：表格中 + 表示正面， - 表示背面
+
+解法二：本题需要理解题目实质，游戏者需要翻转卡片，而翻转的规则是卡片号为游戏者编号的倍数的需要去翻转，反之，如果游戏者的编号是卡片编号的约数需要翻转，即这张卡片有几个约数就需要翻转几次，但是题目规定卡片最初的状态是背面向上，最终状态为正面向上，即需要翻转奇数次，试想哪些数字的约数个数是奇数个，普通数字的约数个数必然成对出现，而只有**平方数的约数个数为奇数个**。所以这道题的本质即为10以内，最大的平方数和最小的平方数之差为几。显然 $9-1=8$. 答案当选 $D$。
 
 ### 例7 时间周期问题
 某单位小范每5天去体育馆打一次羽毛球，小许每9天去一次，老刘每12天去一次。某天三人在体育馆相遇，那么下一次相遇至少要多少天?
 
 $\qquad A.\; 120\qquad B.\; 180\qquad C.\; 540\qquad D.\; 80$
 
-解析：类似例1，只是多了一个数而已。本题实质也是考查倍数中的公倍数，关键仍需理解题目本质。问题最终问下一次相遇需过多少天，试想，这一次相遇到下一次相遇，小范是5天去一次，所以过的天数必然是5的倍数;同理小许每9天去一次，所以过的天数必然是9的倍数;老刘是12天去一次，即过的天数必然为12的倍数，所以过的天数应为 $5,9,12$ 的公倍数，这一次到下一次应为最小公倍数。因为 $lcm(5,9,12)=180$, 答案当选 $B$。
+解析：类似例1，只是多了一个数而已。本题实质考察倍数中的公倍数，关键仍需理解题目本质。问题最终问下一次相遇需过多少天，试想，这一次相遇到下一次相遇，小范是5天去一次，所以过的天数必然是5的倍数;同理小许每9天去一次，所以过的天数必然是9的倍数;老刘是12天去一次，即过的天数必然为12的倍数，所以过的天数应为 $5,9,12$ 的公倍数，这一次到下一次应为最小公倍数。因为 $lcm(5,9,12)=180$, 答案当选 $B$。
 
 ### 例题8 已知GCD和LCM，求这两个数
 
 两个自然数不成倍数关系，它们的最大公约数是18，最小公倍数是216，求这两个数。
 
-解析：设这两个数分别是 $n,m$
+解析：设这两个数分别是 $n,m, \; n\le m$
 
 $\because (n,m)=18,\;\therefore n=18a,\;m=18b,\;(a,b)=1\\ [n,m]=18\times a\times b=216\\ a\times b=12, \therefore a=3,\;b=4$
 
@@ -95,7 +112,7 @@ $\because (n,m)=18,\;\therefore n=18a,\;m=18b,\;(a,b)=1\\ [n,m]=18\times a\times
 
 解析：设这两个数分别是 $n,m, n\ge m$
 
-$\because (n,m)=6,\;\therefore 可设n=6a,\;m=6b,\;(a,b)=1\\ \because [n,m]=6\times a\times b=420\\ a\times b=70,\\ \because n-m =18, \therefore a-b=3, 故得到 a=10,\;b=7$
+$\because (n,m)=6,\;\therefore 可设n=6a,\;m=6b,\;(a,b)=1,\; a\ge b\\ \because [n,m]=6\times a\times b=420\\ a\times b=70,\\ \because n-m =18, \therefore a-b=3, 故得到 a=10,\;b=7$
 
 所以这两个数分别是 $6\times10=60,\;6\times7=42$
 
@@ -132,6 +149,7 @@ $\because [n,m]=90=2\times3^2\times5,\; [m,k]=105=3\times5\times7,\; [n,k]=126=2
 
 答：甲乙两数之和是204。
 
+
 ## 练习题
 -----
 
@@ -143,11 +161,11 @@ $\because [n,m]=90=2\times3^2\times5,\; [m,k]=105=3\times5\times7,\; [n,k]=126=2
 
 4. 两个数的最大公约数是18，最小公倍数是180，两个数的差是54，求这两个数。$\\[7em]$
 
-5. 三个正整数$a、b、c$, 已知 $a与b、a与c、b与c$的最小公倍数分别是525、28和300，那么a的值是多少？$\\[7em]$
+5. 三个正整数$a、b、c$, 已知 $a与b、a与c、b与c$的最小公倍数分别是525、28和300，那么 $a$ 的值是多少？$\\[7em]$
 
 6. $A、B$两数都只含有素因数3和5，它们的最大公约数是75，已知 $A$ 有12个约数，$B$ 有10个约数，那么 $A、B$ 两数之和是多少？$\\[7em]$
 
-7. 已知 $a与b$ 的最大公约数是14，$a与c，b与c$ 的最小公倍数都是350，且 $a不大于b$，那么满足条件的自然数 $a、b、c$ 共有多少组？$\\[7em]$
+7. 已知 $a与b$ 的最大公约数是14，$a与c、b与c$ 的最小公倍数都是350，且 $a不大于b$，那么满足条件的自然数 $a、b、c$ 共有多少组？$\\[7em]$
 
 
 
