素数与合数第一次上传

--- a/primary/grade5/约数与倍数进阶篇.md
+++ b/primary/grade5/约数与倍数进阶篇.md
@@ -9,7 +9,7 @@ $\boxed{两数的最大公约数与最小公倍数的乘积等于两数的乘积
 因为有上述关系式，所以，我们只要有求最大公约数的方法，最小公倍数就可以通过上述关系式得到。这也是很多软件中，只有求最大公约数的函数，而没有提供求最小公倍数的函数的原因。
 
 
-## 多个数互素
+## 多个数互素(coprime)
 ------------
 
 如果 $(a,b)=1$, 即最大公约数为1，则称 $a、b$ 互素。譬如 (4,9)=1, (6,7)=1
@@ -17,6 +17,26 @@ $\boxed{两数的最大公约数与最小公倍数的乘积等于两数的乘积
 1. 两个连续整数一定互素，$(n,n+1)=1,\; n \in \mathrm{N}$
 2. 奇数和偶数一定互素，$(2n,2m+1)=1,\; n,m \in \mathrm{N}$
 3. 求多个数的最大公约数，可以用嵌套完成：$gcd(a,b,c)=gcd(gcd(a,b),c)$，便于程序实现。
+4. 如果 $(a,b)=1，a\mid bc$, 则 $a\mid c$
+5. 如果 $(a,b)=1$, 则 $(a^n,b^m)=1,\;n,m\in \mathrm{N^+}$
+6. 如果 $(a,b)=1，br\equiv bs\;(\mod a)$, 则 $r\equiv s\;(\mod a)$
+7. 如果 $(a,b)=(a,c)1$, 则 $(a,bc)=1$
+
+## 互素的几何体现
+    
+在$\textcolor{red}{\large平面直角坐标系（笛卡尔坐标系）}$中，互素的两个数组成的格点$(n,m)$到原点$(0,0)$的连线，不会通过其他任何格点（即坐标是整数点，端点除外）。或者说连线穿过的格点（整数点）数目为2（仅仅包含两个端点）。
+
+存在关系式：**连线穿过的格点数目$=gcd(n,m)+1$**, 示例参见下图：
+
+[互素的几何现象GGB](ggb/互素和最大公约数的几何现象.ggb)
+
+![互素几何现象PNG](互素的几何现象.png)
+
+## 最大公约数的几何体现
+
+连接原点$(0,0)$到格点$(n,m)$的对角线，穿过的整数格点数为$(n,m)+1$，穿过的小正方形数目就是$n+m-(n,m)$. 
+
+![最大公约数几何现象PNG](最大公约数的几何现象.png)
 
 
 ## 应用例题
