add python code

--- a/primary/grade5/素数与合数.md
+++ b/primary/grade5/素数与合数.md
@@ -16,6 +16,29 @@ $\{非零自然数或正整数\} = \{1\}\cup\{素数\}\cup\{合数\}$
 
 举例： $\because$ $1 \times 6=2\times3=6, \; \therefore 6的因数有 1,2,3,6$
 
+### 约数及个数
+
+用Python编程语言可以很容易得到约数及其个数。
+
+~~~python
+>>> def factors(n):
+    return [x for x in range(1,n+1) if n % x==0]
+>>> fac = factors(100)  # 得到100的约数列表
+>>> fac
+[1, 2, 4, 5, 10, 20, 25, 50, 100]
+>>> len(fac)  # 得到100的约数个数
+9
+~~~
+
+### 素数判断
+
+利用素数的因数只有两个来判断。
+
+~~~python
+>>> def isprime(n):
+    return factors(n)==[1, n]
+~~~
+
 ## 素数和合数的定义
 ---------
 
@@ -280,6 +303,63 @@ $\large \textcolor{red}{100以内的素数表(共25个素数，占比25\%)}$
 |(90,100)|||97||1|
 
 注意：除第一行外，其它行都是对应末尾位。
+
+~~~python
+>>> from itertools import count
+>>> list(islice((x for x in count(1) if x%2==0),10))  # 得到前10个偶数
+[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
+>>> (x for x in count(1) if isprime(x))  # 可得到无穷多个素数
+<generator object <genexpr> at 0x00000242BBEAA6C8>
+>>> list(islice((x for x in count(1) if isprime(x)),25))  # 得到前25个素数
+[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]
+~~~
+
+
+### Generate all primes: Sieve  
+Using the sieve of Eratosthenes on an infinite stream (递归筛法)
+
+**Steps**
+
+1. Generate the count 2, 3, ...  
+2. Mark the first value, p, as prime.  
+3. Remove all multipliers of p from the count.  
+4. Return to step 2
+
+~~~python
+# 递归方法
+def sieve(sieved):
+    prime = next(sieved)
+    yield prime
+    yield from sieve(x for x in sieved if x % prime != 0)
+    
+>>> all_primes = sieve(count(2))
+>>> list(islice(all_primes,10)) # 创建10个素数
+[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]
+
+>>> import sys
+>>> sys.setrecursionlimit(10000)  # 增加递归次数
+>>> list(islice(all_primes,1000))  # 得到后续1000个素数
+~~~
+
+### Generate all primes: Iterative sieve
+Using the sieve of Eratosthenes on an infinite stream but iteratively (迭代筛法)
+
+~~~python
+def isieve(sieved):
+    prime = next(sieved)
+    yield prime
+    primes = [prime]
+    for x in sieved:
+        if any(x % prime == 0 for prime in primes):
+            continue
+        yield x
+        primes.append(x)
+>>> list(islice(isieve(count(2)), 10))  #前10个素数
+>>> next(islice(isieve(count(2)), 10_000-1, 10_000))  # 第10000个素数 
+104729
+~~~
+
+该迭代法比递归快2倍。
 
 ## Python代码得到开始62个半素数表
 --------
