--- a/primary/grade5/约数与倍数.md
+++ b/primary/grade5/约数与倍数.md
@@ -27,6 +27,8 @@
 
 指数形式：$n个a相乘，记成 a^n, 它是乘法的简写形式。\\a^n=\underbrace{a\times a\times\cdots\times a}_{n个a}$
 
+### 约数个数定理
+
 一个合数的约数个数，等于它的素因数分解式中每个素因数的个数（即指数）加1的连乘。
 
 对于一个大于 $1$ 的正整数 $N$ 可以分解素因数：
@@ -37,6 +39,19 @@ $N=\prod_{i=1}^{k} p_i^{a_i} = p_1^{a_1}\cdot p_2^{a_2} \cdots p_k^{a_k}$
 
 其中 $a_1、a_2、a_3、\cdots、a_k$ 是 $p_1、p_2、p_3、\cdots、p_k$的指数
 
+### 约数及个数
+
+用Python编程语言可以很容易得到约数及其个数。
+
+~~~python
+>>> def factors(n):
+    return [x for x in range(1,n+1) if n % x==0]
+>>> fac = factors(100)  # 得到100的约数列表
+>>> fac
+[1, 2, 4, 5, 10, 20, 25, 50, 100]
+>>> len(fac)  # 得到100的约数个数
+9
+~~~
 
 ## 分解素因数是关键
 ---------
