分数与循环小数

--- a/primary/grade6/分数与小数/分数计算与比较大小_作业.md
+++ b/primary/grade6/分数与小数/分数计算与比较大小_作业.md
@@ -1,24 +1,23 @@
 # 分数计算与比较大小作业
 
-## 计算题
+## 一、计算题
 -------
 
 1. $\dfrac{2}{3}+9\dfrac{2}{3}+99\dfrac{2}{3}+999\dfrac{2}{3} \\[7em]$
 
-2. $\left(64\dfrac{7}{16}-32\dfrac{7}{18}\right)-\left(16\dfrac{7}{20}-8\dfrac{9}{16}\right)-\left(4\dfrac{11}{18}+2\dfrac{11}{20}\right) \\[7em]$ 
+2. $\left(64\dfrac{7}{16}-32\dfrac{7}{18}\right)-\left(16\dfrac{7}{20}-8\dfrac{9}{16}\right)-\left(4\dfrac{11}{18}+2\dfrac{11}{20}\right) \\[8em]$ 
 
-3.	计算  
+3. $\left(20\dfrac{1}{3}-18\dfrac{1}{5}+16\dfrac{1}{7}+14\dfrac{2}{3}-12\dfrac{4}{5}+10\dfrac{6}{7}\right)\times\left(9-\dfrac{25}{31}\right) \\[8em]$ 
 
+4. $\left(3\dfrac{2}{3}+1\dfrac{1}{7}\times9\right)\div\dfrac{5}{2}-\left(2\dfrac{2}{3}+\dfrac{2}{7}\right)\times\dfrac{2}{5} \\[8em]$ 
 
+## 二、分数大小比较
+------------
 
-4.	计算 
+5.	比较大小
 
+    $（1）\dfrac{4}{17}\square\dfrac{5}{19}  \qquad\qquad （2）\dfrac{4}{45}\square\dfrac{6}{65} \qquad\qquad  （3）\dfrac{44}{47}\square\dfrac{15}{16}\\[1em]$
 
+6.	由小到大排列 
 
-5.	比较大小（1）   （2）   （3） 
-
-
-
-
-
-6.	由小到大排列： 
+    $\dfrac{5}{7},\quad \dfrac{7}{9},\quad \dfrac{3}{4},\quad \dfrac{2}{3}$
