--- a/primary/grade6/分数与小数/分数计算与比较大小_学生篇.md
+++ b/primary/grade6/分数与小数/分数计算与比较大小_学生篇.md
@@ -40,13 +40,17 @@
 3. 分数除法：等于乘以除数的**倒数**，化为乘法来计算
 
 ### 7. 分数大小比较
+
+比较两个正数的大小的两个常规办法：
+- 相除与1比大小
+- 相减与0比大小
+
+比较两个正分数大小的办法：
 - 分子通分法
 - 分母通分法
 - 交叉相乘法
 - 倒数法
 - 特殊数比较法
-- 相除与1比大小
-- 相减与0比大小
 
 
 ## 二、例题
