分数与循环小数

--- a/primary/grade6/小学奥数模块分类.md
+++ b/primary/grade6/小学奥数模块分类.md
@@ -148,7 +148,7 @@
 
 ### 小学奥数第56讲 数字谜与算式迷综合
 
-## 特定问题分类
+## 基础知识分类
 --------
 
 ### 小学奥数第57讲 归一归总问题
@@ -173,40 +173,40 @@
 
 ### 小学奥数第67讲 分数应用题综合
 
-小学奥数第68讲 经济问题
+### 小学奥数第68讲 经济问题
 
-小学奥数第69讲 溶液浓度问题
+### 小学奥数第69讲 溶液浓度问题
 
-小学奥数第70讲 比例应用题
+### 小学奥数第70讲 比例应用题
 
-小学奥数第71讲 工程问题
+### 小学奥数第71讲 工程问题
 
-小学奥数第72讲 加法原理
+### 小学奥数第72讲 加法原理
 
-小学奥数第73讲 乘法原理
+### 小学奥数第73讲 乘法原理
 
-小学奥数第74讲 排列
+### 小学奥数第74讲 排列
 
-小学奥数第75讲 组合
+### 小学奥数第75讲 组合
 
-小学奥数第76讲 计数方法与技巧综合
+### 小学奥数第76讲 计数方法与技巧综合
 
-小学奥数第77讲 容斥原理
+### 小学奥数第77讲 容斥原理
 
-小学奥数第78讲 几何计数
+### 小学奥数第78讲 几何计数
 
-小学奥数第79讲 概率
+### 小学奥数第79讲 概率
 
-小学奥数第80讲 智巧趣题
+### 小学奥数第80讲 智巧趣题
 
-小学奥数第82讲 统筹规划
+### 小学奥数第82讲 统筹规划
 
-小学奥数第83讲 逻辑推理
+### 小学奥数第83讲 逻辑推理
 
-小学奥数第84讲 操作与策略
+### 小学奥数第84讲 操作与策略
 
-小学奥数第85讲 构造与论证
+### 小学奥数第85讲 构造与论证
 
-小学奥数第86讲 统计与概率
+### 小学奥数第86讲 统计与概率
 
-小学奥数第87讲 最短路线
+### 小学奥数第87讲 最短路线
