分数与小数 整除与数论

--- a/primary/grade5/分数乘除法讲解.md
+++ b/primary/grade5/分数乘除法讲解.md
@@ -38,7 +38,7 @@
 3. 写出6个分母是7的假分数
    - $\dfrac{10}{7},\dfrac{12}{7},\dfrac{13}{7},\dfrac{14}{7},\dfrac{15}{7},\dfrac{16}{7}$
 4. 分母是7的所有真分数有 6 个，其中最大的是 $\dfrac{6}{7}$, 最小的是 $\dfrac{1}{7}$
-5. 分子是7的假分数有 7 个，最大的是 $\dfrac{7}{7}$
+5. 分子是7的假分数有 7 个，最小的是 $\dfrac{7}{7}$
 6. 分数单位是 $\dfrac{1}{9}$ 的最大真分数是 $\dfrac{8}{9}$, 最小假分数是 $\dfrac{9}{9}$
 
 ## 分数乘法 Fractional multiplication
