--- a/primary/grade5/分数应用题讲解.md
+++ b/primary/grade5/分数应用题讲解.md
@@ -24,7 +24,7 @@
 
 $\begin{aligned}
    已修: & \overset{\text{2km}}{————}\\ 
-   未修: & ————\overset{\text{1/5}\times\text{2}}{—} \\
+   未修: & ————\overset{\text{1/5}\times\text{2}\text{km}}{—} \\
     \end{aligned}$
    
    答：全程长 $4\dfrac{2}{5}$ km。
@@ -43,8 +43,8 @@ $\begin{aligned}
 画线段图如下：
 
 $\left . \begin{aligned}
-    第一天:& \overset{\text{1/2}}{————}\\ 
-    第二天:& ———\overset{\text{1/4}\times\text{1/2}}{\cdots} \\
+    第一天:& \overset{\text{1/2}\times40}{————}\\ 
+    第二天:& ———\overset{\text{1/4}\times\text{1/2}\times40}{\cdots} \\
     \end{aligned}\right \} 40$ kg 
 
    第一天 $40\times\dfrac{1}{2}=20$ kg  
