整除与数论练习题

--- a/primary/grade6/1.整除与数论/练习题/素数应用题-6答案.md
+++ b/primary/grade6/1.整除与数论/练习题/素数应用题-6答案.md
@@ -1,64 +1,72 @@
-# 素数应用题-6
+# 素数应用题-6答案
 
 1. 有一个长方体，其长宽高是连续的自然数，其体积为39270立方厘米，求它的表面积。
 
     解析：假设长方体的长宽高为 $a, a+1, a+2$, 则    
     $a(a+1)(a+2)=39270$   
+    因为 $39270=2\times3\times5\times7\times11\times17=33\times34\times35$
+
+    故表面积为 $2(33\times34+34\times35+35\times33)=6934$
+
+    答：该长方体的表面积为6934平方厘米。
+
+2. 把一篮苹果全部分给4人，使四人的苹果数一个比一个多2，且每个人的苹果个数之积是1920，这篮苹果共有多少个？
     
+    解析：对1920进行素因数分解，得到   
+    $1920=2^7\times3\times5=4\times6\times8\times10$
 
+    故四人分别有苹果4, 6, 8, 10, 共28个苹果。
 
-
-
-
-
-2. 把一篮苹果全部分给4人，使四人的苹果数一个比一个多2，且每个人的苹果个数之积是1920，这蓝苹果共有多少个？
-$\\[5em]$
-
-
-
-
-
+    答：这篮苹果共有28个。
 
 3. 将168颗糖，平均分成若干份，每份不得少于10颗，也不得多于50颗，共有多少种分法？
-$\\[5em]$
 
+    解析：  
+    因为 $168=4\times42=6\times28=7\times24=8\times21=12\times14$
 
+    故满足每份不少于10颗且不多于50颗的有：   
+    42, 28, 24, 21, 12, 14 共6种。
 
+    注意：最后一组有两种分法。
 
-
+    答：共有6种分法。
 
 4. 将60个同学分成人数相等的小组，每组不少于6人，不多于15人，有哪几种分法？
-$\\[5em]$
 
+    解析：满足条件的分法有：   
+    $60=6\times10=5\times12=4\times15$   
+    故有分法为每组6人，10人，12人，15人这四种分法。
 
-
-
-
+    答：共有四种分法。
 
 5. 将195个同学排成长方形队伍做早操，行数和列数都大于1，共有几种排队法？
-$\\[5em]$
 
+    解析：注意当行数和列数不等时，交换行列又是另外一种排队法。   
+    $195=3\times5\times13$  
+    大于1的约数有 $3\times65=5\times39=13\times15$  
+    每组有两种排队法，故共有6种排队法。
 
-
-
-
+    答：共有6种行列都大于1的排队法。
 
 6. A比B大9，A和B的乘积是792，求A和B
-$\\[5em]$
 
+    解析：分解素因数后，组合成两个数，使得两数的差为9.   
+    $792=2^3\times3^2\times11=24\times33$
 
-
-
-
+    答：A和B分别为33和24.
 
 7. 四个连续奇数的**积**是$19305$，求这四个奇数是多少？
-$\\[5em]$
 
+    解析：将该数分解素因数，然后重组为四个连续奇数。  
+    $19305=3^3\times5\times11\times13=9\times11\times13\times15$
 
-
-
-
+    答：四个奇数分别是9, 11, 13, 15。
 
 8. 老师带领一班同学植树，学生恰好平均分成4组。如果老师和学生每人植树一样，那么他们一个植树539棵。问：一班有多少个学生？每人植树多少棵？
 
- 
+    解析：如果设每人植树n棵，每组有a个学生，根据题意有：    
+    $(4a+1)n=539$, 而 $539=7^2\times11$  
+    故要在539的因数中，找到一个除以4余1的数，只有 $4a+1=49$，解得 $a=12$   
+    故一班有学生 $4a=4\times12=48$人。每人植树11棵。
+
+    答：一班有48个学生，每人植树11棵。
